[package]
name = "asteroids"
version = "0.1.0"
authors = ["Anton Kholetsky <kvazipolyr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20.0-alpha4"
shaderc = "0.6"
gfx-hal = "0.4.1"
gfx-backend-dx12 = "0.4.1"